# tracebox

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
codex/patches/: 0001-Record-Tracebox-evidence-for-app-server-command-exec.patch
codex/proof/: validation.md
docs/: architecture.md  ci-artifacts.md  codex-runtime-strategy.md  demo.md  release-checklist.md
examples/env-drift/: .gitignore  Cargo.toml  README.md
examples/env-drift/src/: lib.rs
examples/env-drift/tests/: env_drift_test.rs
src/: cli.rs  lib.rs  main.rs
src/commands/: archive.rs  diff.rs  inspect.rs  list.rs  mod.rs  report.rs  restore.rs  run.rs  tui.rs  validate.rs  verify.rs
src/evidence/: browser.rs  env.rs  event.rs  ids.rs  integrity.rs  manifest.rs  mod.rs  output.rs  recorder.rs  store.rs  validation.rs  workspace.rs
src/runtime/: process.rs  runner.rs
tests/: cli.rs
