[package]
name = "tracebox"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Linux-native immutable execution evidence runtime"
repository = "https://github.com/your-org/tracebox"
readme = "README.md"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
uuid = { version = "1.10", features = ["v7", "serde"] }

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
