[package]
name = "tracebox"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Linux-native immutable execution evidence runtime"
repository = "https://github.com/peccatos/tracebox"
readme = "README.md"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = { version = "0.29.0", optional = true }
ratatui = { version = "0.30.0", optional = true, default-features = false, features = ["crossterm"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
uuid = { version = "1.10", features = ["v7", "serde"] }

[features]
default = []
tui = ["dep:crossterm", "dep:ratatui"]

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
